--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="parallaxResume/assets/styles/style.css">
+    <link rel="stylesheet" href="{{parallaxResume.github.url }}/assets/styles/style.css">
     <script type="text/javascript" charset="UTF-8" src="https://maps.google.com/maps-api-v3/api/js/26/2/common.js"></script>
     <script type="text/javascript" charset="UTF-8" src="https://maps.google.com/maps-api-v3/api/js/26/2/map.js"></script>
     <script type="text/javascript" charset="UTF-8" src="https://maps.google.com/maps-api-v3/api/js/26/2/util.js"></script>
