--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#services">Background</a></li>
         <li><a href="#google_map">Contact</a></li>
-        <li><a href="https://www.jameswitkowski.com">Personal Website</a></li>
+        <li><a href="http://www.jameswitkowski.com">Personal Website</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
