--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div id="home" class="home">
   <div class="text-vcenter">
     <h2>UX DESIGN & WEB DEVELOPMENT</h2>
-    <p>As a private consultant I work at a leadership level to ensure the design and development of cohesive user experiences via websites that are optimized for search, social and mobile. I start with gathering requirements, brainstorming, designing, prototyping and then developing. I enjoy conducting research and understanding what is unique and relevant for each market, brand and message.</p>
+    <p>As a private consultant strive to ensure the design and development of cohesive user experiences via websites that are optimized for search, social and mobile. I start with gathering requirements, brainstorming, designing, prototyping and then developing. I enjoy conducting research and understanding what is unique and relevant for each market, brand and message.</p>
     <a href="#about" class="btn btn-success btn-lg">Continue</a>
   </div>
 </div>
@@ -89,17 +89,17 @@
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-cloud"> </i>
         <h4>Systems Analysis, Design and Development</h4>
-        <p>Responsible for maintaining a network of servers, computers and peripheral devices. I was also responsible for the overall problem solving and study of how all of the hardware and software worked together as component parts and their interactions as a whole system. As a company manager and board member I was constantly studying the business and its procedures in order to identify and communicate goals and purposes to both owners and employees. I designed systems and procedures intended to achieve these goals in an efficient way. Several IT projects I managed were aimed at improving revenues and information sharing.</p>
+        <p>Maintaining a network of servers, computers and peripheral devices. Best contribution is overall problem solving and study of how all of the hardware and software worked together as component parts and their interactions as a whole system. As a company manager and board member I was constantly studying the business and its procedures in order to identify and communicate goals and purposes to both owners and employees. I designed systems and procedures intended to achieve these goals in an efficient way. Several IT projects I managed were aimed at improving revenues and information sharing.</p>
       </div>
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-leaf"> </i>
         <h4>PROJECT AND OPERATIONS MANAGER</h4>
-        <p> Responsible for maintaining a system wide overview of the company that included technology, marketing and operations management. In addition to serving on the corporate board, I worked as a part of a Scrum team that included 3 other managers. We became quite proficient at “statistical process control” and we met regularly to measure what was being done, how well and how we could improve upon what we were doing. Our goal was to be constantly getting better and we did. We sold specialty lumber all over the world from a remote location and maintained top search engine rankings for all of our species and products.</p>
+        <p> Positioned to examine multiple aspects of the company that included technology, marketing and operations management. In addition to serving on the corporate board, I worked as a part of a Scrum team that included 3 other managers. We became quite proficient at “statistical process control” and we met regularly to measure what was being done, how well and how we could improve upon what we were doing. Our goal was to be constantly getting better and we did. We sold specialty lumber all over the world from a remote location and maintained top search engine rankings for all of our species and products.</p>
       </div>
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-phone-alt"> </i>
         <h4>UX DESIGN and INBOUND MARKETING</h4>
-        <p> I worked closely with the Marketing department and was responsible for the design & re-design of an existing company website and the design & development of a CRM/ERP system that replaced paper & excel forms to create a paperless office. The company website was fully optimized for SEM/SEO and included social marketing as well as a company e-Newsletter and blog. We integrated an enterprise wide digital and mobile strategy that started with our website and brought our customers all the way through our sales process digitally. We designed and developed an award winning mobile app that did complex math for our customers and kept our sales staff connected and available at all times.</p>
+        <p> COllaborating with the Marketing department we re-designed the existing company website and the design & development of a CRM/ERP system that replaced paper & excel forms to create a paperless office. The company website was fully optimized for SEM/SEO and included social marketing as well as a company e-Newsletter and blog. We integrated an enterprise wide digital and mobile strategy that started with our website and brought our customers all the way through our sales process digitally. We designed and developed an award winning mobile app that did complex math for our customers and kept our sales staff connected and available at all times.</p>
       </div>
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-bullhorn"> </i>
@@ -121,7 +121,7 @@
             <h2 class="panel-title">Fullstack Web Development</h2>
           </div>
           <div class="panel-body lead">
-            Full stack developer who is capable of performing tasks at any level of the stack I am working based on project specifications. I am familiar with Mac, Windows and many different types of software, hardware and coding languages. UX design, Angular, Bootstrap, CSS, HTML, Photoshop, GitHub, Node.JS, Drupal, SQL, WordPress, Agile, PHP, Javascript. 
+            Front-End developer who is capable of performing tasks at any level of the stack I am working based on project specifications. I am familiar with Mac, Windows and many different types of software, hardware and coding languages. UX design, Angular, Bootstrap, CSS, HTML, Photoshop, GitHub, Node.JS, Drupal, SQL, WordPress, Agile, PHP, Javascript. 
           </div>
         </div>
       </div>
