edits and styles

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="col-sm-6">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2 class="panel-title">Fullstack Web Development</h2>
+            <h2 class="panel-title">Javascript Web Development</h2>
           </div>
           <div class="panel-body lead">
             Front-End developer who is capable of performing tasks at any level of the stack I am working based on project specifications. I am familiar with Mac, Windows and many different types of software, hardware and coding languages. UX design, Angular, Bootstrap, CSS, HTML, Photoshop, GitHub, Node.JS, Drupal, SQL, WordPress, Agile, PHP, Javascript. 
@@ -145,9 +145,9 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center">
-        <h3>Customized Website Application</h3>
-        <h4>I co-created an SRS, SQL database diagram, mockups and Wireframes for a customized ERP/CRM web application.
-</h4>
+        
+        <h2>Where the operation of bombardment might fail, I would contrive catapults, mangonels, trebuchet, and other machines of marvelous efficacy and not in common use. And in short, according to the variety of cases, I can contrive various and endless means of offense and defense.</h2>
+        <h3>- Leonardo da Vinci(from letter to the Duke of Milan)</h3>
       </div>
     </div>
   </div>
