makin it cooler

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="home" class="home">
   <div class="text-vcenter">
     <h2>UX DESIGN & WEB DEVELOPMENT</h2>
-    <p>As a private consultant strive to ensure the design and development of cohesive user experiences via websites that are optimized for search, social and mobile. I start with gathering requirements, brainstorming, designing, prototyping and then developing. I enjoy conducting research and understanding what is unique and relevant for each market, brand and message.</p>
+    <p>I always strive to ensure the design and development of cohesive user experiences via websites that are optimized for search, social and mobile. I start with gathering requirements, brainstorming, designing, prototyping and then developing. I enjoy conducting research and understanding what is unique and relevant for each market, brand and message.</p>
     <a href="#about" class="btn btn-success btn-lg">Continue</a>
   </div>
 </div>
@@ -69,11 +69,27 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <img src="http://f.tqn.com/y/jobsearch/1/W/L/r/ln-logo_button.jpg" alt="" />
-      </div>
+                <a href="http://www.jameswitkowski.com">
+                    <p class="email">jameswitkowski.com</p>
+                </a>
+                <h2 class="address">4146 S. Herar Lane Boise, Idaho 83706 | Tel: (509) 322-6480</h2>
+            </div>
+            <div class="sidebar profile-image col-md-4 col-sm-4">
+                <p style="margin-top: 10px; font-size: 18px;">
+                    <i class="fa fa-github"></i> GitHub Profile:
+                    <a href="https://github.com/jameswitkowski">/jameswitkowski</a>
+                    
+                    <ul class="list-inline intro-social-buttons">
+                            
+                            <li>
+                                <a href="https://www.linkedin.com/in/jameswitkowski" class="btn btn-primary btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            </li>
+                        </ul>
+                </p>
+            </div>
       <div class="col-sm-6 text-center">
-        <h2>Linked In</h2>
-        <p class="lead">Learn more about my education, interests, what I am following and see details about my training and previous work experience.</p>
+        <!--<h2>Linked In</h2>-->
+        <p class="lead">Learn more about my education, interests, and see details about my training and previous work experience.</p>
       </div>
     </div>
   </div>
@@ -85,12 +101,12 @@
 <!-- third section - Services -->
 <div id="services" class="pad-section">
   <div class="container">
-    <h2 class="text-center">My Background</h2> <hr />
+    <h2 class="text-center">My Skillset</h2> <hr />
     <div class="row text-center">
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-cloud"> </i>
         <h4>Systems Analysis, Design and Development</h4>
-        <p>Maintaining a network of servers, computers and peripheral devices. Best contribution is overall problem solving and study of how all of the hardware and software worked together as component parts and their interactions as a whole system. As a company manager and board member I was constantly studying the business and its procedures in order to identify and communicate goals and purposes to both owners and employees. I designed systems and procedures intended to achieve these goals in an efficient way. Several IT projects I managed were aimed at improving revenues and information sharing.</p>
+        <p>Maintaining a network of servers, computers and peripheral devices. Best contribution is overall problem solving and study of how all of the hardware and software worked together as component parts and their interactions as a whole system. As a company manager and board member I was constantly studying the business and its procedures in order to identify and communicate goals and purposes to both owners and employees. I designed systems and procedures to achieve these goals in an efficient way. Several IT projects were aimed at improving revenues and information sharing.</p>
       </div>
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-leaf"> </i>
@@ -100,7 +116,7 @@
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-phone-alt"> </i>
         <h4>UX DESIGN and INBOUND MARKETING</h4>
-        <p> COllaborating with the Marketing department we re-designed the existing company website and the design & development of a CRM/ERP system that replaced paper & excel forms to create a paperless office. The company website was fully optimized for SEM/SEO and included social marketing as well as a company e-Newsletter and blog. We integrated an enterprise wide digital and mobile strategy that started with our website and brought our customers all the way through our sales process digitally. We designed and developed an award winning mobile app that did complex math for our customers and kept our sales staff connected and available at all times.</p>
+        <p> Collaborating with the Marketing department we re-designed company website and the design & development of a CRM/ERP system that replaced paper & excel forms to create a paperless office. The website was fully optimized for SEM/SEO and included social marketing as well as a company e-Newsletter and blog. We integrated an enterprise wide digital and mobile strategy that started with our website and brought our customers all the way through our sales process digitally. We designed and developed an award winning mobile app that did complex math for our customers and kept our sales staff connected and available at all times.</p>
       </div>
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glyphicon-bullhorn"> </i>
